@@ -698,6 +698,8 @@ sub AUTOLOAD {
 $initmem = $initmem || 4000000;		# How much memory for the stack
 $initprimes = $initprimes || 500000;	# Calculate primes up to this number
 
+$VERSION = 0.92;
+
 bootstrap Math::Pari;
 
 # Preloaded methods go here.  Autoload methods go after __END__, and are
